Add spring-security with Basic Auth
Demo users with ADMIN and USER roles, where Admin can create, update, delete jokes, while any user can get/read jokes.